# composer-local-jp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml
.claude/: setting.json
.github/workflows/: ci.yml  security.yml
composer-local-jp/: README.md  SECURITY.md  pyproject.toml
composer-local-jp/composer_local/: __init__.py  cli.py  constants.py  export_composer_variables.py  import_variables_to_local.py  secret_manager_sync.py  utils.py
composer-local-jp/composer_local/docker_files/: entrypoint.sh  run_as_user.sh
composer_local/: __init__.py  __main__.py  cli.py  composer_settings.py.example  composer_settings.pyi  console.py  constants.py  docker_manager.py  docker_ops.py  environment.py  errors.py  export_composer_variables.py  files.py  gcp_sync.py  health_check.py  import_variables_to_local.py  initialization.py  secret_manager_sync.py  sync_settings.py  sync_variables.py  utils.py
composer_local/docker_files/: entrypoint.sh  run_as_user.sh  webserver_config.py
dags/print_hello_world/: dag.py
docs/: gcp-integration.md
docs/superpowers/plans/: 2026-06-13-lightweight-refactor.md
docs/superpowers/specs/: 2026-06-13-lightweight-refactor-design.md
scripts/: load_make_settings.py  test_gcp_integration.py
tests/: conftest.py  test_cli.py  test_constants.py  test_environment.py  test_errors.py  test_export_composer_variables.py  test_files.py  test_gcp_sync.py  test_import_variables_to_local.py  test_secret_manager_sync.py  test_sync_settings.py  test_sync_variables.py  test_utils.py
