[project]
name = "composer-local-jp"
dynamic = ["version"]
description = "Google Cloud Composer local development tool (Japanese optimized, derived from GoogleCloudPlatform/composer-local-dev)"
authors = [{ name = "Hirohiko Nakui" }]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "apache-airflow==3.1.8",
    "apache-airflow-providers-google>=14.0.0",
    "click>=8.1.8,<9.0.0",
    "docker>=7.0.0",
    "rich>=13.7.0",
]
[project.scripts]
composer-local = "composer_local.__main__:cli"


[project.optional-dependencies]
gcp = [
    "google-auth>=2.29.0,<3.0.0",
    "google-cloud-orchestration-airflow>=1.2.0",
    "google-cloud-artifact-registry>=1.2.0",
    "google-cloud-secret-manager>=2.0.0",
]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E203"]
exclude = [
    ".venv",
    "venv",
    ".git",
    "__pycache__",
    ".pytest_cache",
    "site-packages",
    "**/site-packages/**",
    "**/google/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=composer_local --cov-report=term-missing"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ruff>=0.8.0", "pytest>=8.0.0", "pytest-cov>=6.0.0"]

[tool.hatch.version]
path = "composer_local/version.py"

[tool.hatch.build.targets.wheel]
packages = ["composer_local"]
